--- a/css/content.css
+++ b/css/content.css
@@ -19,3 +19,10 @@
     margin-top: 4px;
     padding-bottom: 10px;
 }
+.no-ads-image-container{
+    margin-right: 10px;
+}
+.no-ads-image {
+    height: 1.5em;
+    width: 1.5em;
+}
