--- a/css/main.css
+++ b/css/main.css
@@ -23,6 +23,7 @@ img#main-image {
     margin-top: 5px;
     margin-left: auto;
     margin-right: auto;
+    width: 100%;
 }
 
 div#main-about-text {
